updates for Ken's suggestions. Also made index show yellow.
git-svn-id: https://unicode.org/repos/unicodetools/trunk@599 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/data/charts/case/index_list.html
+++ b/unicodetools/data/charts/case/index_list.html
@@ -12,6 +12,9 @@ p {
 	font-size: 90%;
 	text-align: Left
 }
+a.new {
+    background-color: #FFFFCC;
+}
 -->
 </style>
 <link rel="stylesheet" type="text/css"
@@ -46,11 +49,11 @@ p {
 			<a href="help.html">Help</a>
 		</p>
 		<p>
-<a href = 'chart_Latin.html' title='Latn'>Latin</a><br>
+<a href = 'chart_Latin.html' title='Latn' class='new'>Latin</a><br>
 
-<a href = 'chart_Greek.html' title='Grek'>Greek</a><br>
+<a href = 'chart_Greek.html' title='Grek' class='new'>Greek</a><br>
 
-<a href = 'chart_Cyrillic.html' title='Cyrl'>Cyrillic</a><br>
+<a href = 'chart_Cyrillic.html' title='Cyrl' class='new'>Cyrillic</a><br>
 
 <a href = 'chart_Armenian.html' title='Armn'>Armenian</a><br>
 
@@ -62,11 +65,11 @@ p {
 
 <a href = 'chart_Glagolitic.html' title='Glag'>Glagolitic</a><br>
 
-<a href = 'chart_Warang_Citi.html' title='Wara'>Warang_Citi</a><br>
+<a href = 'chart_Warang_Citi.html' title='Wara' class='new'>Warang_Citi</a><br>
 
 <a href = 'chart_Mark-Nonspacing.html' title='Mn'>Mark-Nonspacing</a><br>
 
-<a href = 'chart_NoCaseMapping.html'>NoCaseMapping</a><br>
+<a href = 'chart_NoCaseMapping.html' class='new'>NoCaseMapping</a><br>
 
 </p><hr width='50%'><p style='text-align: center;'>
 <a href='../collation/index.html' target='_top'>Collation&nbsp;Charts</a><br>
@@ -77,5 +80,5 @@ Case&nbsp;Charts<br>
 <a href='../nameslist/index.html' target='_top'>Names&nbsp;List&nbsp;Charts</a><br>
 </p><hr width='50%'><p style='font-size: 70%; text-align: center;'>
 UCD: 7.0.0
-<br>2014-01-20 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
+<br>2014-01-21 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
 </p></div></body></html>
