--- a/unicodetools/data/charts/name/index_list.html
+++ b/unicodetools/data/charts/name/index_list.html
@@ -12,6 +12,9 @@ p {
 	font-size: 90%;
 	text-align: Left
 }
+a.new {
+    background-color: #FFFFCC;
+}
 -->
 </style>
 <link rel="stylesheet" type="text/css"
@@ -46,57 +49,57 @@ p {
 			<a href="help.html">Help</a>
 		</p>
 		<p>
-<a href = 'chart_A.html'>A</a><br>
+<a href = 'chart_A.html' class='new'>A</a><br>
 
-<a href = 'chart_B.html'>B</a><br>
+<a href = 'chart_B.html' class='new'>B</a><br>
 
-<a href = 'chart_C.html'>C</a><br>
+<a href = 'chart_C.html' class='new'>C</a><br>
 
-<a href = 'chart_D.html'>D</a><br>
+<a href = 'chart_D.html' class='new'>D</a><br>
 
-<a href = 'chart_E.html'>E</a><br>
+<a href = 'chart_E.html' class='new'>E</a><br>
 
-<a href = 'chart_F.html'>F</a><br>
+<a href = 'chart_F.html' class='new'>F</a><br>
 
-<a href = 'chart_G.html'>G</a><br>
+<a href = 'chart_G.html' class='new'>G</a><br>
 
-<a href = 'chart_H.html'>H</a><br>
+<a href = 'chart_H.html' class='new'>H</a><br>
 
-<a href = 'chart_I.html'>I</a><br>
+<a href = 'chart_I.html' class='new'>I</a><br>
 
-<a href = 'chart_J.html'>J</a><br>
+<a href = 'chart_J.html' class='new'>J</a><br>
 
-<a href = 'chart_K.html'>K</a><br>
+<a href = 'chart_K.html' class='new'>K</a><br>
 
-<a href = 'chart_L.html'>L</a><br>
+<a href = 'chart_L.html' class='new'>L</a><br>
 
-<a href = 'chart_M.html'>M</a><br>
+<a href = 'chart_M.html' class='new'>M</a><br>
 
-<a href = 'chart_N.html'>N</a><br>
+<a href = 'chart_N.html' class='new'>N</a><br>
 
-<a href = 'chart_O.html'>O</a><br>
+<a href = 'chart_O.html' class='new'>O</a><br>
 
-<a href = 'chart_P.html'>P</a><br>
+<a href = 'chart_P.html' class='new'>P</a><br>
 
-<a href = 'chart_Q.html'>Q</a><br>
+<a href = 'chart_Q.html' class='new'>Q</a><br>
 
-<a href = 'chart_R.html'>R</a><br>
+<a href = 'chart_R.html' class='new'>R</a><br>
 
-<a href = 'chart_S.html'>S</a><br>
+<a href = 'chart_S.html' class='new'>S</a><br>
 
-<a href = 'chart_T.html'>T</a><br>
+<a href = 'chart_T.html' class='new'>T</a><br>
 
-<a href = 'chart_U.html'>U</a><br>
+<a href = 'chart_U.html' class='new'>U</a><br>
 
-<a href = 'chart_V.html'>V</a><br>
+<a href = 'chart_V.html' class='new'>V</a><br>
 
-<a href = 'chart_W.html'>W</a><br>
+<a href = 'chart_W.html' class='new'>W</a><br>
 
-<a href = 'chart_X.html'>X</a><br>
+<a href = 'chart_X.html' class='new'>X</a><br>
 
-<a href = 'chart_Y.html'>Y</a><br>
+<a href = 'chart_Y.html' class='new'>Y</a><br>
 
-<a href = 'chart_Z.html'>Z</a><br>
+<a href = 'chart_Z.html' class='new'>Z</a><br>
 
 </p><hr width='50%'><p style='text-align: center;'>
 <a href='../collation/index.html' target='_top'>Collation&nbsp;Charts</a><br>
@@ -107,5 +110,5 @@ Name&nbsp;Index&nbsp;Charts<br>
 <a href='../nameslist/index.html' target='_top'>Names&nbsp;List&nbsp;Charts</a><br>
 </p><hr width='50%'><p style='font-size: 70%; text-align: center;'>
 UCD: 7.0.0
-<br>2014-01-20 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
+<br>2014-01-21 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
 </p></div></body></html>
