--- a/unicodetools/data/charts/nameslist/mainList.html
+++ b/unicodetools/data/charts/nameslist/mainList.html
@@ -38,7 +38,7 @@ p {
 	</table>
 	<div class="body">
 		<!-- BEGIN CONTENTS -->
-		<h2 align="center">Nameslist Chart</h2>
+		<h2 align="center">Nameslist Charts</h2>
 		<p style="text-align:center">
 			<a href="help.html" target="names">Help</a>
 		</p>
@@ -320,5 +320,5 @@ p {
 Names&nbsp;List&nbsp;Charts<br>
 </p><hr width='50%'><p style='font-size: 70%; text-align: center;'>
 UCD: 7.0.0
-<br>2014-01-20 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
+<br>2014-01-21 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
 </p></div></body></html>
