--- a/unicodetools/data/charts/normalization/help.html
+++ b/unicodetools/data/charts/normalization/help.html
@@ -18,7 +18,7 @@ th           { background-color: #eeeeee }
 
 <body>
 
-<h1>Instructions</h1>
+<h1>About Normalization Charts</h1>
 <p>The Normalization Charts provide charts of the characters in Unicode that 
 differ from at least one of their normalization forms (C, D, KC, KD).</p>
 <ul>
@@ -45,16 +45,19 @@ differ from at least one of their normalization forms (C, D, KC, KD).</p>
       </li>
     </ul>
   </li>
-  <li>If your browser supports tool-tops, then hovering your mouse over cells 
+  <li>If your browser supports tool-tips, then hovering your mouse over cells 
     will show the names of the characters.</li>
   <li>For more information, see <a href="http://www.unicode.org/unicode/reports/tr15/" target="_top">UAX 
     #15: Unicode Normalization Forms</a>.</li>
 </ul>
-<blockquote>
-  <p><i>To properly view these charts, your browser should be reasonably recent 
-  so it handles Unicode and cascading style sheets, and you should install a 
-  Unicode font and configure your browser to use it.</i></p>
-</blockquote>
+	<p>
+		<i>To properly view these charts, you need to have an updated
+			browser and Unicode fonts that cover the characters you are
+			interested in. For more information, see <a
+			href='http://www.unicode.org/help/display_problems.html'>Display
+				Problems</a>.
+		</i>
+	</p>
 </body>
 
 </html>
