--- a/unicodetools/data/charts/normalization/index_list.html
+++ b/unicodetools/data/charts/normalization/index_list.html
@@ -12,6 +12,9 @@ p {
 	font-size: 90%;
 	text-align: Left
 }
+a.new {
+    background-color: #FFFFCC;
+}
 -->
 </style>
 <link rel="stylesheet" type="text/css"
@@ -46,11 +49,11 @@ p {
 			<a href="help.html">Help</a>
 		</p>
 		<p>
-<a href = 'chart_Latin.html' title='Latn'>Latin</a><br>
+<a href = 'chart_Latin.html' title='Latn' class='new'>Latin</a><br>
 
 <a href = 'chart_Greek.html' title='Grek'>Greek</a><br>
 
-<a href = 'chart_Cyrillic.html' title='Cyrl'>Cyrillic</a><br>
+<a href = 'chart_Cyrillic.html' title='Cyrl' class='new'>Cyrillic</a><br>
 
 <a href = 'chart_Armenian.html' title='Armn'>Armenian</a><br>
 
@@ -102,11 +105,11 @@ p {
 
 <a href = 'chart_Chakma.html' title='Cakm'>Chakma</a><br>
 
-<a href = 'chart_Grantha.html' title='Gran'>Grantha</a><br>
+<a href = 'chart_Grantha.html' title='Gran' class='new'>Grantha</a><br>
 
-<a href = 'chart_Siddham.html' title='Sidd'>Siddham</a><br>
+<a href = 'chart_Siddham.html' title='Sidd' class='new'>Siddham</a><br>
 
-<a href = 'chart_Tirhuta.html' title='Tirh'>Tirhuta</a><br>
+<a href = 'chart_Tirhuta.html' title='Tirh' class='new'>Tirhuta</a><br>
 
 <a href = 'chart_Letter-Modifier.html' title='Lm'>Letter-Modifier</a><br>
 
@@ -147,5 +150,5 @@ Normalization&nbsp;Charts<br>
 <a href='../nameslist/index.html' target='_top'>Names&nbsp;List&nbsp;Charts</a><br>
 </p><hr width='50%'><p style='font-size: 70%; text-align: center;'>
 UCD: 7.0.0
-<br>2014-01-20 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
+<br>2014-01-21 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
 </p></div></body></html>
