--- a/unicodetools/data/charts/script/index_list.html
+++ b/unicodetools/data/charts/script/index_list.html
@@ -11,6 +11,9 @@
 p {
 	font-size: 90%
 }
+a.new {
+    background-color: #FFFFCC;
+}
 -->
 </style>
 <base target="main">
@@ -37,30 +40,30 @@ p {
 	</table>
 	<div class="body">
 		<!-- BEGIN CONTENTS -->
-		<h2 align="center">Script Chart</h2>
+		<h2 align="center">Script Charts</h2>
 		<p style="text-align:center">
 			<a href="help.html">Help</a>
 		</p>
 		<p>
-<a href = 'chart_Latin.html' title='Latn'>Latin</a><br>
+<a href = 'chart_Latin.html' title='Latn' class='new'>Latin</a><br>
 
-<a href = 'chart_Greek.html' title='Grek'>Greek</a><br>
+<a href = 'chart_Greek.html' title='Grek' class='new'>Greek</a><br>
 
-<a href = 'chart_Cyrillic.html' title='Cyrl'>Cyrillic</a><br>
+<a href = 'chart_Cyrillic.html' title='Cyrl' class='new'>Cyrillic</a><br>
 
-<a href = 'chart_Armenian.html' title='Armn'>Armenian</a><br>
+<a href = 'chart_Armenian.html' title='Armn' class='new'>Armenian</a><br>
 
 <a href = 'chart_Hebrew.html' title='Hebr'>Hebrew</a><br>
 
-<a href = 'chart_Arabic.html' title='Arab'>Arabic</a><br>
+<a href = 'chart_Arabic.html' title='Arab' class='new'>Arabic</a><br>
 
 <a href = 'chart_Syriac.html' title='Syrc'>Syriac</a><br>
 
 <a href = 'chart_Thaana.html' title='Thaa'>Thaana</a><br>
 
-<a href = 'chart_Devanagari.html' title='Deva'>Devanagari</a><br>
+<a href = 'chart_Devanagari.html' title='Deva' class='new'>Devanagari</a><br>
 
-<a href = 'chart_Bengali.html' title='Beng'>Bengali</a><br>
+<a href = 'chart_Bengali.html' title='Beng' class='new'>Bengali</a><br>
 
 <a href = 'chart_Gurmukhi.html' title='Guru'>Gurmukhi</a><br>
 
@@ -70,13 +73,13 @@ p {
 
 <a href = 'chart_Tamil.html' title='Taml'>Tamil</a><br>
 
-<a href = 'chart_Telugu.html' title='Telu'>Telugu</a><br>
+<a href = 'chart_Telugu.html' title='Telu' class='new'>Telugu</a><br>
 
-<a href = 'chart_Kannada.html' title='Knda'>Kannada</a><br>
+<a href = 'chart_Kannada.html' title='Knda' class='new'>Kannada</a><br>
 
-<a href = 'chart_Malayalam.html' title='Mlym'>Malayalam</a><br>
+<a href = 'chart_Malayalam.html' title='Mlym' class='new'>Malayalam</a><br>
 
-<a href = 'chart_Sinhala.html' title='Sinh'>Sinhala</a><br>
+<a href = 'chart_Sinhala.html' title='Sinh' class='new'>Sinhala</a><br>
 
 <a href = 'chart_Thai.html'>Thai</a><br>
 
@@ -84,7 +87,7 @@ p {
 
 <a href = 'chart_Tibetan.html' title='Tibt'>Tibetan</a><br>
 
-<a href = 'chart_Myanmar.html' title='Mymr'>Myanmar</a><br>
+<a href = 'chart_Myanmar.html' title='Mymr' class='new'>Myanmar</a><br>
 
 <a href = 'chart_Georgian.html' title='Geor'>Georgian</a><br>
 
@@ -98,7 +101,7 @@ p {
 
 <a href = 'chart_Ogham.html' title='Ogam'>Ogham</a><br>
 
-<a href = 'chart_Runic.html' title='Runr'>Runic</a><br>
+<a href = 'chart_Runic.html' title='Runr' class='new'>Runic</a><br>
 
 <a href = 'chart_Khmer.html' title='Khmr'>Khmer</a><br>
 
@@ -114,7 +117,7 @@ p {
 
 <a href = 'chart_Yi.html' title='Yiii'>Yi</a><br>
 
-<a href = 'chart_Old_Italic.html' title='Ital'>Old_Italic</a><br>
+<a href = 'chart_Old_Italic.html' title='Ital' class='new'>Old_Italic</a><br>
 
 <a href = 'chart_Gothic.html' title='Goth'>Gothic</a><br>
 
@@ -128,7 +131,7 @@ p {
 
 <a href = 'chart_Tagbanwa.html' title='Tagb'>Tagbanwa</a><br>
 
-<a href = 'chart_Limbu.html' title='Limb'>Limbu</a><br>
+<a href = 'chart_Limbu.html' title='Limb' class='new'>Limbu</a><br>
 
 <a href = 'chart_Tai_Le.html' title='Tale'>Tai_Le</a><br>
 
@@ -146,7 +149,7 @@ p {
 
 <a href = 'chart_Buginese.html' title='Bugi'>Buginese</a><br>
 
-<a href = 'chart_Coptic.html' title='Copt'>Coptic</a><br>
+<a href = 'chart_Coptic.html' title='Copt' class='new'>Coptic</a><br>
 
 <a href = 'chart_New_Tai_Lue.html' title='Talu'>New_Tai_Lue</a><br>
 
@@ -162,7 +165,7 @@ p {
 
 <a href = 'chart_Balinese.html' title='Bali'>Balinese</a><br>
 
-<a href = 'chart_Cuneiform.html' title='Xsux'>Cuneiform</a><br>
+<a href = 'chart_Cuneiform.html' title='Xsux' class='new'>Cuneiform</a><br>
 
 <a href = 'chart_Phoenician.html' title='Phnx'>Phoenician</a><br>
 
@@ -224,7 +227,7 @@ p {
 
 <a href = 'chart_Batak.html' title='Batk'>Batak</a><br>
 
-<a href = 'chart_Brahmi.html' title='Brah'>Brahmi</a><br>
+<a href = 'chart_Brahmi.html' title='Brah' class='new'>Brahmi</a><br>
 
 <a href = 'chart_Mandaic.html' title='Mand'>Mandaic</a><br>
 
@@ -236,71 +239,71 @@ p {
 
 <a href = 'chart_Miao.html' title='Plrd'>Miao</a><br>
 
-<a href = 'chart_Sharada.html' title='Shrd'>Sharada</a><br>
+<a href = 'chart_Sharada.html' title='Shrd' class='new'>Sharada</a><br>
 
 <a href = 'chart_Sora_Sompeng.html' title='Sora'>Sora_Sompeng</a><br>
 
 <a href = 'chart_Takri.html' title='Takr'>Takri</a><br>
 
-<a href = 'chart_Caucasian_Albanian.html' title='Aghb'>Caucasian_Albanian</a><br>
+<a href = 'chart_Caucasian_Albanian.html' title='Aghb' class='new'>Caucasian_Albanian</a><br>
 
-<a href = 'chart_Bassa_Vah.html' title='Bass'>Bassa_Vah</a><br>
+<a href = 'chart_Bassa_Vah.html' title='Bass' class='new'>Bassa_Vah</a><br>
 
-<a href = 'chart_Duployan.html' title='Dupl'>Duployan</a><br>
+<a href = 'chart_Duployan.html' title='Dupl' class='new'>Duployan</a><br>
 
-<a href = 'chart_Elbasan.html' title='Elba'>Elbasan</a><br>
+<a href = 'chart_Elbasan.html' title='Elba' class='new'>Elbasan</a><br>
 
-<a href = 'chart_Grantha.html' title='Gran'>Grantha</a><br>
+<a href = 'chart_Grantha.html' title='Gran' class='new'>Grantha</a><br>
 
-<a href = 'chart_Pahawh_Hmong.html' title='Hmng'>Pahawh_Hmong</a><br>
+<a href = 'chart_Pahawh_Hmong.html' title='Hmng' class='new'>Pahawh_Hmong</a><br>
 
-<a href = 'chart_Khojki.html' title='Khoj'>Khojki</a><br>
+<a href = 'chart_Khojki.html' title='Khoj' class='new'>Khojki</a><br>
 
-<a href = 'chart_Linear_A.html' title='Lina'>Linear_A</a><br>
+<a href = 'chart_Linear_A.html' title='Lina' class='new'>Linear_A</a><br>
 
-<a href = 'chart_Mahajani.html' title='Mahj'>Mahajani</a><br>
+<a href = 'chart_Mahajani.html' title='Mahj' class='new'>Mahajani</a><br>
 
-<a href = 'chart_Manichaean.html' title='Mani'>Manichaean</a><br>
+<a href = 'chart_Manichaean.html' title='Mani' class='new'>Manichaean</a><br>
 
-<a href = 'chart_Mende_Kikakui.html' title='Mend'>Mende_Kikakui</a><br>
+<a href = 'chart_Mende_Kikakui.html' title='Mend' class='new'>Mende_Kikakui</a><br>
 
-<a href = 'chart_Modi.html'>Modi</a><br>
+<a href = 'chart_Modi.html' class='new'>Modi</a><br>
 
-<a href = 'chart_Mro.html' title='Mroo'>Mro</a><br>
+<a href = 'chart_Mro.html' title='Mroo' class='new'>Mro</a><br>
 
-<a href = 'chart_Old_North_Arabian.html' title='Narb'>Old_North_Arabian</a><br>
+<a href = 'chart_Old_North_Arabian.html' title='Narb' class='new'>Old_North_Arabian</a><br>
 
-<a href = 'chart_Nabataean.html' title='Nbat'>Nabataean</a><br>
+<a href = 'chart_Nabataean.html' title='Nbat' class='new'>Nabataean</a><br>
 
-<a href = 'chart_CJK.html'>CJK</a><br>
+<a href = 'chart_CJK.html' class='new'>CJK</a><br>
 
-<a href = 'chart_CJK-Extensions.html'>CJK-Extensions</a><br>
+<a href = 'chart_CJK-Extensions.html' class='new'>CJK-Extensions</a><br>
 
-<a href = 'chart_Unsupported.html'>Unsupported</a><br>
+<a href = 'chart_Unsupported.html' class='new'>Unsupported</a><br>
 
-<a href = 'chart_Psalter_Pahlavi.html' title='Phlp'>Psalter_Pahlavi</a><br>
+<a href = 'chart_Psalter_Pahlavi.html' title='Phlp' class='new'>Psalter_Pahlavi</a><br>
 
-<a href = 'chart_Siddham.html' title='Sidd'>Siddham</a><br>
+<a href = 'chart_Siddham.html' title='Sidd' class='new'>Siddham</a><br>
 
-<a href = 'chart_Khudawadi.html' title='Sind'>Khudawadi</a><br>
+<a href = 'chart_Khudawadi.html' title='Sind' class='new'>Khudawadi</a><br>
 
-<a href = 'chart_Tirhuta.html' title='Tirh'>Tirhuta</a><br>
+<a href = 'chart_Tirhuta.html' title='Tirh' class='new'>Tirhuta</a><br>
 
-<a href = 'chart_Warang_Citi.html' title='Wara'>Warang_Citi</a><br>
+<a href = 'chart_Warang_Citi.html' title='Wara' class='new'>Warang_Citi</a><br>
 
-<a href = 'chart_Letter-Modifier.html' title='Lm'>Letter-Modifier</a><br>
+<a href = 'chart_Letter-Modifier.html' title='Lm' class='new'>Letter-Modifier</a><br>
 
 <a href = 'chart_Letter-Other.html' title='Lo'>Letter-Other</a><br>
 
-<a href = 'chart_Mark-Nonspacing.html' title='Mn'>Mark-Nonspacing</a><br>
+<a href = 'chart_Mark-Nonspacing.html' title='Mn' class='new'>Mark-Nonspacing</a><br>
 
-<a href = 'chart_Mark-Enclosing.html' title='Me'>Mark-Enclosing</a><br>
+<a href = 'chart_Mark-Enclosing.html' title='Me' class='new'>Mark-Enclosing</a><br>
 
 <a href = 'chart_Mark-Spacing.html' title='Mc'>Mark-Spacing</a><br>
 
 <a href = 'chart_Number-Decimal.html' title='Nd'>Number-Decimal</a><br>
 
-<a href = 'chart_Number-Other.html' title='No'>Number-Other</a><br>
+<a href = 'chart_Number-Other.html' title='No' class='new'>Number-Other</a><br>
 
 <a href = 'chart_Separator-Space.html' title='Zs'>Separator-Space</a><br>
 
@@ -310,25 +313,25 @@ p {
 
 <a href = 'chart_Control.html' title='Cc'>Control</a><br>
 
-<a href = 'chart_Format.html' title='Cf'>Format</a><br>
+<a href = 'chart_Format.html' title='Cf' class='new'>Format</a><br>
 
-<a href = 'chart_Punctuation-Dash.html' title='Pd'>Punctuation-Dash</a><br>
+<a href = 'chart_Punctuation-Dash.html' title='Pd' class='new'>Punctuation-Dash</a><br>
 
-<a href = 'chart_Punctuation-Open.html' title='Ps'>Punctuation-Open</a><br>
+<a href = 'chart_Punctuation-Open.html' title='Ps' class='new'>Punctuation-Open</a><br>
 
 <a href = 'chart_Punctuation-Close.html' title='Pe'>Punctuation-Close</a><br>
 
 <a href = 'chart_Punctuation-Connector.html' title='Pc'>Punctuation-Connector</a><br>
 
-<a href = 'chart_Punctuation-Other.html' title='Po'>Punctuation-Other</a><br>
+<a href = 'chart_Punctuation-Other.html' title='Po' class='new'>Punctuation-Other</a><br>
 
 <a href = 'chart_Symbol-Math.html' title='Sm'>Symbol-Math</a><br>
 
-<a href = 'chart_Symbol-Currency.html' title='Sc'>Symbol-Currency</a><br>
+<a href = 'chart_Symbol-Currency.html' title='Sc' class='new'>Symbol-Currency</a><br>
 
 <a href = 'chart_Symbol-Modifier.html' title='Sk'>Symbol-Modifier</a><br>
 
-<a href = 'chart_Symbol-Other.html' title='So'>Symbol-Other</a><br>
+<a href = 'chart_Symbol-Other.html' title='So' class='new'>Symbol-Other</a><br>
 
 <a href = 'chart_Punctuation-Initial.html' title='Pi'>Punctuation-Initial</a><br>
 
@@ -343,5 +346,5 @@ Script&nbsp;Charts<br>
 <a href='../nameslist/index.html' target='_top'>Names&nbsp;List&nbsp;Charts</a><br>
 </p><hr width='50%'><p style='font-size: 70%; text-align: center;'>
 UCD: 7.0.0
-<br>2014-01-20 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
+<br>2014-01-21 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
 </p></div></body></html>
