--- a/unicodetools/org/unicode/text/UCA/index_header.html
+++ b/unicodetools/org/unicode/text/UCA/index_header.html
@@ -12,6 +12,9 @@ p {
 	font-size: 90%;
 	text-align: Left
 }
+a.new {
+    background-color: #FFFFCC;
+}
 -->
 </style>
 <link rel="stylesheet" type="text/css"
