--- a/unicodetools/org/unicode/text/UCA/nameslist_chart_header.html
+++ b/unicodetools/org/unicode/text/UCA/nameslist_chart_header.html
@@ -38,7 +38,7 @@ p {
 	</table>
 	<div class="body">
 		<!-- BEGIN CONTENTS -->
-		<h2 align="center">Nameslist Chart</h2>
+		<h2 align="center">Nameslist Charts</h2>
 		<p style="text-align:center">
 			<a href="help.html" target="names">Help</a>
 		</p>
