--- a/unicodetools/org/unicode/text/UCA/norm_index_header.html
+++ b/unicodetools/org/unicode/text/UCA/norm_index_header.html
@@ -8,6 +8,9 @@
 <title>Normalization Chart</title>
 <style type='text/css'><!--
 p            { font-size: 90% }
+a.new {
+    background-color: #FFFFCC;
+}
 --></style>
 <base target="main">
 <link rel="stylesheet" type="text/css"
@@ -32,6 +35,6 @@ href="http://www.unicode.org/webscripts/standard_styles.css">
 </table>
 <div class="body">
 <!-- BEGIN CONTENTS -->
-<h2 align="center">Normalization Chart</h2>
+<h2 align="center">Normalization Charts</h2>
 <p style="text-align:center"><a href="help.html">Help</a></p>
 <p>
