--- a/unicodetools/org/unicode/text/UCA/script_index_header.html
+++ b/unicodetools/org/unicode/text/UCA/script_index_header.html
@@ -11,6 +11,9 @@
 p {
 	font-size: 90%
 }
+a.new {
+    background-color: #FFFFCC;
+}
 -->
 </style>
 <base target="main">
@@ -37,7 +40,7 @@ p {
 	</table>
 	<div class="body">
 		<!-- BEGIN CONTENTS -->
-		<h2 align="center">Script Chart</h2>
+		<h2 align="center">Script Charts</h2>
 		<p style="text-align:center">
 			<a href="help.html">Help</a>
 		</p>
