--- a/unicodetools/data/charts/collation/help.html
+++ b/unicodetools/data/charts/collation/help.html
@@ -120,6 +120,14 @@ character in the chart, as follows.</p>
   <li>For more information, see <a href="http://www.unicode.org/unicode/reports/tr10/" target="_top">UTS 
     #10: Unicode Collation Algorithm</a>.</li>
 </ul>
+	<p>
+		<i>To properly view these charts, you need to have an updated
+			browser and Unicode fonts that cover the characters you are
+			interested in. For more information, see <a
+			href='http://www.unicode.org/help/display_problems.html'>Display
+				Problems</a>.
+		</i>
+	</p>
 
 </body>
 
