--- a/unicodetools/data/charts/collation/index_list.html
+++ b/unicodetools/data/charts/collation/index_list.html
@@ -12,6 +12,9 @@ p {
 	font-size: 90%;
 	text-align: Left
 }
+a.new {
+    background-color: #FFFFCC;
+}
 -->
 </style>
 <link rel="stylesheet" type="text/css"
@@ -46,31 +49,31 @@ p {
 			<a href="help.html">Help</a>
 		</p>
 		<p>
-<a href = 'chart_Ignored.html'>Ignored</a><br>
+<a href = 'chart_Ignored.html' class='new'>Ignored</a><br>
 
-<a href = 'chart_Secondary.html'>Secondary</a><br>
+<a href = 'chart_Secondary.html' class='new'>Secondary</a><br>
 
 <a href = 'chart_Whitespace.html'>Whitespace</a><br>
 
-<a href = 'chart_Punctuation.html'>Punctuation</a><br>
+<a href = 'chart_Punctuation.html' class='new'>Punctuation</a><br>
 
-<a href = 'chart_General-Symbol.html'>General-Symbol</a><br>
+<a href = 'chart_General-Symbol.html' class='new'>General-Symbol</a><br>
 
-<a href = 'chart_Currency-Symbol.html'>Currency-Symbol</a><br>
+<a href = 'chart_Currency-Symbol.html' class='new'>Currency-Symbol</a><br>
 
-<a href = 'chart_Digits.html'>Digits</a><br>
+<a href = 'chart_Digits.html' class='new'>Digits</a><br>
 
-<a href = 'chart_Latin.html' title='Latn'>Latin</a><br>
+<a href = 'chart_Latin.html' title='Latn' class='new'>Latin</a><br>
 
-<a href = 'chart_Greek.html' title='Grek'>Greek</a><br>
+<a href = 'chart_Greek.html' title='Grek' class='new'>Greek</a><br>
 
 <a href = 'chart_Coptic.html' title='Copt'>Coptic</a><br>
 
-<a href = 'chart_Cyrillic.html' title='Cyrl'>Cyrillic</a><br>
+<a href = 'chart_Cyrillic.html' title='Cyrl' class='new'>Cyrillic</a><br>
 
 <a href = 'chart_Glagolitic.html' title='Glag'>Glagolitic</a><br>
 
-<a href = 'chart_Unsupported.html'>Unsupported</a><br>
+<a href = 'chart_Unsupported.html' class='new'>Unsupported</a><br>
 
 <a href = 'chart_Georgian.html' title='Geor'>Georgian</a><br>
 
@@ -82,7 +85,7 @@ p {
 
 <a href = 'chart_Samaritan.html' title='Samr'>Samaritan</a><br>
 
-<a href = 'chart_Arabic.html' title='Arab'>Arabic</a><br>
+<a href = 'chart_Arabic.html' title='Arab' class='new'>Arabic</a><br>
 
 <a href = 'chart_Syriac.html' title='Syrc'>Syriac</a><br>
 
@@ -96,9 +99,9 @@ p {
 
 <a href = 'chart_Ethiopic.html' title='Ethi'>Ethiopic</a><br>
 
-<a href = 'chart_Devanagari.html' title='Deva'>Devanagari</a><br>
+<a href = 'chart_Devanagari.html' title='Deva' class='new'>Devanagari</a><br>
 
-<a href = 'chart_Bengali.html' title='Beng'>Bengali</a><br>
+<a href = 'chart_Bengali.html' title='Beng' class='new'>Bengali</a><br>
 
 <a href = 'chart_Gurmukhi.html' title='Guru'>Gurmukhi</a><br>
 
@@ -108,7 +111,7 @@ p {
 
 <a href = 'chart_Tamil.html' title='Taml'>Tamil</a><br>
 
-<a href = 'chart_Telugu.html' title='Telu'>Telugu</a><br>
+<a href = 'chart_Telugu.html' title='Telu' class='new'>Telugu</a><br>
 
 <a href = 'chart_Kannada.html' title='Knda'>Kannada</a><br>
 
@@ -124,27 +127,27 @@ p {
 
 <a href = 'chart_Kaithi.html' title='Kthi'>Kaithi</a><br>
 
-<a href = 'chart_Mahajani.html' title='Mahj'>Mahajani</a><br>
+<a href = 'chart_Mahajani.html' title='Mahj' class='new'>Mahajani</a><br>
 
-<a href = 'chart_Sharada.html' title='Shrd'>Sharada</a><br>
+<a href = 'chart_Sharada.html' title='Shrd' class='new'>Sharada</a><br>
 
-<a href = 'chart_Khojki.html' title='Khoj'>Khojki</a><br>
+<a href = 'chart_Khojki.html' title='Khoj' class='new'>Khojki</a><br>
 
-<a href = 'chart_Khudawadi.html' title='Sind'>Khudawadi</a><br>
+<a href = 'chart_Khudawadi.html' title='Sind' class='new'>Khudawadi</a><br>
 
-<a href = 'chart_Grantha.html' title='Gran'>Grantha</a><br>
+<a href = 'chart_Grantha.html' title='Gran' class='new'>Grantha</a><br>
 
-<a href = 'chart_Tirhuta.html' title='Tirh'>Tirhuta</a><br>
+<a href = 'chart_Tirhuta.html' title='Tirh' class='new'>Tirhuta</a><br>
 
-<a href = 'chart_Siddham.html' title='Sidd'>Siddham</a><br>
+<a href = 'chart_Siddham.html' title='Sidd' class='new'>Siddham</a><br>
 
-<a href = 'chart_Modi.html'>Modi</a><br>
+<a href = 'chart_Modi.html' class='new'>Modi</a><br>
 
 <a href = 'chart_Takri.html' title='Takr'>Takri</a><br>
 
 <a href = 'chart_Sundanese.html' title='Sund'>Sundanese</a><br>
 
-<a href = 'chart_Brahmi.html' title='Brah'>Brahmi</a><br>
+<a href = 'chart_Brahmi.html' title='Brah' class='new'>Brahmi</a><br>
 
 <a href = 'chart_Kharoshthi.html' title='Khar'>Kharoshthi</a><br>
 
@@ -160,7 +163,7 @@ p {
 
 <a href = 'chart_Phags-Pa.html' title='Phag'>Phags-Pa</a><br>
 
-<a href = 'chart_Limbu.html' title='Limb'>Limbu</a><br>
+<a href = 'chart_Limbu.html' title='Limb' class='new'>Limbu</a><br>
 
 <a href = 'chart_Tagalog.html' title='Tglg'>Tagalog</a><br>
 
@@ -178,7 +181,7 @@ p {
 
 <a href = 'chart_Kayah_Li.html' title='Kali'>Kayah Li</a><br>
 
-<a href = 'chart_Myanmar.html' title='Mymr'>Myanmar</a><br>
+<a href = 'chart_Myanmar.html' title='Mymr' class='new'>Myanmar</a><br>
 
 <a href = 'chart_Chakma.html' title='Cakm'>Chakma</a><br>
 
@@ -206,7 +209,7 @@ p {
 
 <a href = 'chart_Ogham.html' title='Ogam'>Ogham</a><br>
 
-<a href = 'chart_Runic.html' title='Runr'>Runic</a><br>
+<a href = 'chart_Runic.html' title='Runr' class='new'>Runic</a><br>
 
 <a href = 'chart_Old_Turkic.html' title='Orkh'>Old Turkic</a><br>
 
@@ -214,9 +217,9 @@ p {
 
 <a href = 'chart_Bamum.html' title='Bamu'>Bamum</a><br>
 
-<a href = 'chart_Bassa_Vah.html' title='Bass'>Bassa_Vah</a><br>
+<a href = 'chart_Bassa_Vah.html' title='Bass' class='new'>Bassa_Vah</a><br>
 
-<a href = 'chart_Mende_Kikakui.html' title='Mend'>Mende_Kikakui</a><br>
+<a href = 'chart_Mende_Kikakui.html' title='Mend' class='new'>Mende_Kikakui</a><br>
 
 <a href = 'chart_Hangul.html' title='Hang'>Hangul</a><br>
 
@@ -230,11 +233,11 @@ p {
 
 <a href = 'chart_Miao.html' title='Plrd'>Miao</a><br>
 
-<a href = 'chart_Warang_Citi.html' title='Wara'>Warang_Citi</a><br>
+<a href = 'chart_Warang_Citi.html' title='Wara' class='new'>Warang_Citi</a><br>
 
-<a href = 'chart_CJK-Extensions.html'>CJK-Extensions</a><br>
+<a href = 'chart_CJK-Extensions.html' class='new'>CJK-Extensions</a><br>
 
-<a href = 'chart_Pahawh_Hmong.html' title='Hmng'>Pahawh_Hmong</a><br>
+<a href = 'chart_Pahawh_Hmong.html' title='Hmng' class='new'>Pahawh_Hmong</a><br>
 
 <a href = 'chart_Lycian.html' title='Lyci'>Lycian</a><br>
 
@@ -242,7 +245,7 @@ p {
 
 <a href = 'chart_Lydian.html' title='Lydi'>Lydian</a><br>
 
-<a href = 'chart_Old_Italic.html' title='Ital'>Old_Italic</a><br>
+<a href = 'chart_Old_Italic.html' title='Ital' class='new'>Old_Italic</a><br>
 
 <a href = 'chart_Gothic.html' title='Goth'>Gothic</a><br>
 
@@ -250,33 +253,33 @@ p {
 
 <a href = 'chart_Shavian.html' title='Shaw'>Shavian</a><br>
 
-<a href = 'chart_Duployan.html' title='Dupl'>Duployan</a><br>
+<a href = 'chart_Duployan.html' title='Dupl' class='new'>Duployan</a><br>
 
 <a href = 'chart_Osmanya.html' title='Osma'>Osmanya</a><br>
 
-<a href = 'chart_Elbasan.html' title='Elba'>Elbasan</a><br>
+<a href = 'chart_Elbasan.html' title='Elba' class='new'>Elbasan</a><br>
 
-<a href = 'chart_Caucasian_Albanian.html' title='Aghb'>Caucasian_Albanian</a><br>
+<a href = 'chart_Caucasian_Albanian.html' title='Aghb' class='new'>Caucasian_Albanian</a><br>
 
 <a href = 'chart_Sora_Sompeng.html' title='Sora'>Sora_Sompeng</a><br>
 
-<a href = 'chart_Mro.html' title='Mroo'>Mro</a><br>
+<a href = 'chart_Mro.html' title='Mroo' class='new'>Mro</a><br>
 
 <a href = 'chart_Linear_B.html' title='Linb'>Linear_B</a><br>
 
-<a href = 'chart_Linear_A.html' title='Lina'>Linear_A</a><br>
+<a href = 'chart_Linear_A.html' title='Lina' class='new'>Linear_A</a><br>
 
 <a href = 'chart_Cypriot.html' title='Cprt'>Cypriot</a><br>
 
 <a href = 'chart_Old_South_Arabian.html' title='Sarb'>Old South Arabian</a><br>
 
-<a href = 'chart_Old_North_Arabian.html' title='Narb'>Old_North_Arabian</a><br>
+<a href = 'chart_Old_North_Arabian.html' title='Narb' class='new'>Old_North_Arabian</a><br>
 
 <a href = 'chart_Avestan.html' title='Avst'>Avestan</a><br>
 
-<a href = 'chart_CJK.html'>CJK</a><br>
+<a href = 'chart_CJK.html' class='new'>CJK</a><br>
 
-<a href = 'chart_Nabataean.html' title='Nbat'>Nabataean</a><br>
+<a href = 'chart_Nabataean.html' title='Nbat' class='new'>Nabataean</a><br>
 
 <a href = 'chart_Imperial_Aramaic.html' title='Armi'>Imperial Aramaic</a><br>
 
@@ -284,15 +287,15 @@ p {
 
 <a href = 'chart_Inscriptional_Pahlavi.html' title='Phli'>Inscriptional Pahlavi</a><br>
 
-<a href = 'chart_Psalter_Pahlavi.html' title='Phlp'>Psalter_Pahlavi</a><br>
+<a href = 'chart_Psalter_Pahlavi.html' title='Phlp' class='new'>Psalter_Pahlavi</a><br>
 
-<a href = 'chart_Manichaean.html' title='Mani'>Manichaean</a><br>
+<a href = 'chart_Manichaean.html' title='Mani' class='new'>Manichaean</a><br>
 
 <a href = 'chart_Ugaritic.html' title='Ugar'>Ugaritic</a><br>
 
 <a href = 'chart_Old_Persian.html' title='Xpeo'>Old_Persian</a><br>
 
-<a href = 'chart_Cuneiform.html' title='Xsux'>Cuneiform</a><br>
+<a href = 'chart_Cuneiform.html' title='Xsux' class='new'>Cuneiform</a><br>
 
 <a href = 'chart_Egyptian_Hieroglyphs.html' title='Egyp'>Egyptian Hieroglyphs</a><br>
 
@@ -313,5 +316,5 @@ Collation&nbsp;Charts<br>
 <a href='../nameslist/index.html' target='_top'>Names&nbsp;List&nbsp;Charts</a><br>
 </p><hr width='50%'><p style='font-size: 70%; text-align: center;'>
 UCD: 7.0.0<br>UCA: 7.0.0
-<br>2014-01-20 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
+<br>2014-01-21 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
 </p></div></body></html>
