--- a/unicodetools/org/unicode/text/UCA/case_help.html
+++ b/unicodetools/org/unicode/text/UCA/case_help.html
@@ -7,53 +7,64 @@
 <meta name="ProgId" content="FrontPage.Editor.Document">
 <title>Chart Instructions</title>
 <style type='text/css'>
-
 <!--
-
-th           { background-color: #eeeeee }
+th {
+	background-color: #eeeeee
+}
+a.new {
+    background-color: #FFFFCC;
+}
 -->
-
 </style>
 </head>
 
 <body>
 
-<h1>Instructions</h1>
-<p>The Case Charts provide charts of the characters in Unicode that differ from 
-at least one of their case forms (lower, title, upper, or fold).</p>
-<ul>
-  <li>The index pages are ordered by the following:
-    <ul>
-      <li>By script, unless the script is COMMON or INHERITED</li>
-      <li>By general category, in the latter two cases</li>
-      <li>If characters have a decomposition containing a cased character, but 
-        do not have a case mapping (lower, title, upper, or fold), then they are 
-        listed in NoCaseMapping.</li>
-    </ul>
-  </li>
-  <li>Within each chart page, the code points are sorted by lowercased <a href="http://www.unicode.org/unicode/reports/tr15/" target="_top">NFKD</a>, 
-    to place related characters next to one another.</li>
-  <li>To help pick out cells visually, the more interesting ones have a light 
-    blue background. The other cells have grayed-out text.
-    <ul>
-      <li>The more interesting ones are:
-        <ul>
-          <li><i>lower: </i>if different than the character</li>
-          <li><i>title: </i>if different than upper</li>
-          <li><i>upper: </i>if different than the character</li>
-          <li><i>fold: </i>if different than lower</li>
-        </ul>
-      </li>
-    </ul>
-  </li>
-  <li>If your browser supports tool-tops, then hovering your mouse over cells 
-    will show the names of the characters.</li>
-</ul>
-<blockquote>
-  <p><i>To properly view these charts, your browser should be reasonably recent 
-  so it handles Unicode and cascading style sheets, and you should install a 
-  Unicode font and configure your browser to use it.</i></p>
-</blockquote>
+	<h1>About Case Charts</h1>
+	<p>The Case Charts provide charts of the characters in Unicode that
+		differ from at least one of their case forms (lower, title, upper, or
+		fold).</p>
+	<ul>
+		<li>The index pages are ordered by the following:
+			<ul>
+				<li>By script, unless the script is COMMON or INHERITED</li>
+				<li>By general category, in the latter two cases</li>
+				<li>If characters have a decomposition containing a cased
+					character, but do not have a case mapping (lower, title, upper, or
+					fold), then they are listed in NoCaseMapping.</li>
+			</ul>
+		</li>
+		<li>Within each chart page, the code points are sorted by
+			lowercased <a href="http://www.unicode.org/unicode/reports/tr15/"
+			target="_top">NFKD</a>, to place related characters next to one
+			another.
+		</li>
+		<li>To help pick out cells visually, the more interesting ones
+			have a light blue background. The other cells have grayed-out text.
+			<ul>
+				<li>The more interesting ones are:
+					<ul>
+						<li><i>lower: </i>if different than the character</li>
+						<li><i>title: </i>if different than upper</li>
+						<li><i>upper: </i>if different than the character</li>
+						<li><i>fold: </i>if different than lower</li>
+					</ul>
+				</li>
+			</ul>
+		</li>
+		<li>If your browser supports tool-tops, then hovering your mouse
+			over cells will show the names of the characters.</li>
+	</ul>
+	<p>Hovering over a cell will show the name of the character in that
+		cell.</p>
+	<p>
+		<i>To properly view these charts, you need to have an updated
+			browser and Unicode fonts that cover the characters you are
+			interested in. For more information, see <a
+			href='http://www.unicode.org/help/display_problems.html'>Display
+				Problems</a>.
+		</i>
+	</p>
 </body>
 
 </html>
