--- a/unicodetools/org/unicode/text/UCA/case_index_header.html
+++ b/unicodetools/org/unicode/text/UCA/case_index_header.html
@@ -37,7 +37,7 @@ p {
 	</table>
 	<div class="body">
 		<!-- BEGIN CONTENTS -->
-		<h2 align="center">Case Chart</h2>
+		<h2 align="center">Case Charts</h2>
 		<p style="text-align:center">
 			<a href="help.html">Help</a>
 		</p>
