--- a/unicodetools/org/unicode/text/UCA/nameslist_help.html
+++ b/unicodetools/org/unicode/text/UCA/nameslist_help.html
@@ -17,7 +17,7 @@ th {
 
 <body>
 
-	<h1>Instructions</h1>
+	<h1>About Name List Charts</h1>
 	<p>The Names List Charts provide HTML charts of the characters in
 		Unicode, based on NamesList.txt. The characters added in the last
 		release are in yellow.
@@ -27,12 +27,20 @@ th {
 			Hovering over the code point shows the name.</li>
 		<li>Click on Help to get this list.</li>
 	</ol>
-	The names are augmented with some additional symbols. For examples, see Latin Extended-B under 01CA (Ǌ) LATIN CAPITAL LETTER NJ.
-		<ol>
-		<li>↑	Points to the uppercase form.</li>
-		<li>↓	Points to the lowercase form.</li>
-		<li>↕	Points to the titlecase form.</li>
+	The names are augmented with some additional symbols. For examples, see
+	Latin Extended-B under 01CA (Ǌ) LATIN CAPITAL LETTER NJ.
+	<ol>
+		<li>↑ Points to the uppercase form.</li>
+		<li>↓ Points to the lowercase form.</li>
+		<li>↕ Points to the titlecase form.</li>
 	</ol>
+	</p>
+		<i>To properly view these charts, you need to have an updated
+			browser and Unicode fonts that cover the characters you are
+			interested in. For more information, see <a
+			href='http://www.unicode.org/help/display_problems.html'>Display
+				Problems</a>.
+		</i>
 	</p>
 </body>
 </html>
