updated to latest ucd and reran.
git-svn-id: https://unicode.org/repos/unicodetools/trunk@600 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/data/charts/nameslist/c_11200.html
+++ b/unicodetools/data/charts/nameslist/c_11200.html
@@ -59,7 +59,7 @@
 <td class='cellnew' title='khojki letter sa'> 𑈩 <br><tt><a href='n_11200.html#11229'>11229</a></tt></td>
 <td class='cellnew' title='khojki letter ha'> 𑈪 <br><tt><a href='n_11200.html#1122A'>1122A</a></tt></td>
 <td class='cellnew' title='khojki letter lla'> 𑈫 <br><tt><a href='n_11200.html#1122B'>1122B</a></tt></td>
-<td class='cellnew' title='khojki vowel sign aa'> ◌𑈬 <br><tt><a href='n_11200.html#1122C'>1122C</a></tt></td>
+<td class='cellnew' title='khojki vowel sign aa'> 𑈬 <br><tt><a href='n_11200.html#1122C'>1122C</a></tt></td>
 <td class='cellnew' title='khojki vowel sign i'> 𑈭 <br><tt><a href='n_11200.html#1122D'>1122D</a></tt></td>
 <td class='cellnew' title='khojki vowel sign ii'> 𑈮 <br><tt><a href='n_11200.html#1122E'>1122E</a></tt></td>
 <td class='cellnew' title='khojki vowel sign u'> ◌𑈯 <br><tt><a href='n_11200.html#1122F'>1122F</a></tt></td>
