--- a/unicodetools/data/charts/nameslist/n_11200.html
+++ b/unicodetools/data/charts/nameslist/n_11200.html
@@ -54,7 +54,7 @@
 <tr><td class='new'><code><a name='1122A'>1122A</a></code></td><td class='c'> 𑈪 </td><td colSpan='2' class='new'><span class='name'>Khojki Letter Ha</span></td></tr>
 <tr><td class='new'><code><a name='1122B'>1122B</a></code></td><td class='c'> 𑈫 </td><td colSpan='2' class='new'><span class='name'>Khojki Letter Lla</span></td></tr>
 <tr><td colspan='4'><h2>Dependent vowel signs</h2></td></tr>
-<tr><td class='new'><code><a name='1122C'>1122C</a></code></td><td class='c'> ◌𑈬 </td><td colSpan='2' class='new'><span class='name'>Khojki Vowel Sign Aa</span></td></tr>
+<tr><td class='new'><code><a name='1122C'>1122C</a></code></td><td class='c'> 𑈬 </td><td colSpan='2' class='new'><span class='name'>Khojki Vowel Sign Aa</span></td></tr>
 <tr><td class='new'><code><a name='1122D'>1122D</a></code></td><td class='c'> 𑈭 </td><td colSpan='2' class='new'><span class='name'>Khojki Vowel Sign I</span></td></tr>
 <tr><td class='new'><code><a name='1122E'>1122E</a></code></td><td class='c'> 𑈮 </td><td colSpan='2' class='new'><span class='name'>Khojki Vowel Sign Ii</span></td></tr>
 <tr><td class='new'><code><a name='1122F'>1122F</a></code></td><td class='c'> ◌𑈯 </td><td colSpan='2' class='new'><span class='name'>Khojki Vowel Sign U</span></td></tr>
