many updates (also fixed UTF16 import that causes problems under JDK 7)
git-svn-id: https://unicode.org/repos/unicodetools/trunk@602 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/data/charts/name/chart_R.html
+++ b/unicodetools/data/charts/name/chart_R.html
@@ -2969,6 +2969,9 @@
 <tr><td class='h'>RUB</td>
 <td  title='ARABIC START OF RUB EL HIZB'>&#x6DE;<br><tt>06DE</tt></td>
 </tr>
+<tr><td class='h'>RUBLE</td>
+<td class='new' title='RUBLE SIGN'>&#x20BD;<br><tt>20BD</tt></td>
+</tr>
 <tr><td class='h'>RUE</td>
 <td  title='TAI THAM LETTER RUE'>&#x1A42;<br><tt>1A42</tt></td>
 </tr>
