--- a/unicodetools/data/charts/nameslist/c_1B80.html
+++ b/unicodetools/data/charts/nameslist/c_1B80.html
@@ -60,8 +60,8 @@
 <td class='cell' title='sundanese vowel sign paneuleung'> ◌ᮩ <br><tt><a href='n_1B80.html#1BA9'>1BA9</a></tt></td>
 <td class='cell' title='sundanese sign pamaaeh'> ᮪ <br><tt><a href='n_1B80.html#1BAA'>1BAA</a></tt></td>
 <td class='cell' title='sundanese sign virama'> ◌᮫ <br><tt><a href='n_1B80.html#1BAB'>1BAB</a></tt></td>
-<td class='cell' title='sundanese consonant sign pasangan ma'> ᮬ <br><tt><a href='n_1B80.html#1BAC'>1BAC</a></tt></td>
-<td class='cell' title='sundanese consonant sign pasangan wa'> ᮭ <br><tt><a href='n_1B80.html#1BAD'>1BAD</a></tt></td>
+<td class='cell' title='sundanese consonant sign pasangan ma'> ◌ᮬ <br><tt><a href='n_1B80.html#1BAC'>1BAC</a></tt></td>
+<td class='cell' title='sundanese consonant sign pasangan wa'> ◌ᮭ <br><tt><a href='n_1B80.html#1BAD'>1BAD</a></tt></td>
 <td class='cell' title='sundanese letter kha'> ᮮ <br><tt><a href='n_1B80.html#1BAE'>1BAE</a></tt></td>
 <td class='cell' title='sundanese letter sya'> ᮯ <br><tt><a href='n_1B80.html#1BAF'>1BAF</a></tt></td>
 </tr><tr>
