--- a/unicodetools/data/charts/nameslist/n_11300.html
+++ b/unicodetools/data/charts/nameslist/n_11300.html
@@ -93,7 +93,8 @@
 <tr><td colspan='4'><h2>Dependent vowel signs</h2></td></tr>
 <tr><td class='new'><code><a name='11362'>11362</a></code></td><td class='c'> 𑍢 </td><td colSpan='2' class='new'><span class='name'>Grantha Vowel Sign Vocalic L</span></td></tr>
 <tr><td class='new'><code><a name='11363'>11363</a></code></td><td class='c'> 𑍣 </td><td colSpan='2' class='new'><span class='name'>Grantha Vowel Sign Vocalic Ll</span></td></tr>
-<tr><td colspan='4'><h2>Sama Vedic svara markers</h2></td></tr>
+<tr><td colspan='4'><h2>Cantillation marks (svara) for the Samaveda</h2></td></tr>
+<tr><td class='comment' colspan='4'>See the similar set of Devanagari svara markers for the Samaveda, encoded in the range A8E0-A8F1.</td></tr>
 <tr><td class='new'><code><a name='11366'>11366</a></code></td><td class='c'> ◌𑍦 </td><td colSpan='2' class='new'><span class='name'>Combining Grantha Digit Zero</span></td></tr>
 <tr><td class='new'><code><a name='11367'>11367</a></code></td><td class='c'> ◌𑍧 </td><td colSpan='2' class='new'><span class='name'>Combining Grantha Digit One</span></td></tr>
 <tr><td class='new'><code><a name='11368'>11368</a></code></td><td class='c'> ◌𑍨 </td><td colSpan='2' class='new'><span class='name'>Combining Grantha Digit Two</span></td></tr>
