--- a/unicodetools/data/charts/nameslist/n_1B80.html
+++ b/unicodetools/data/charts/nameslist/n_1B80.html
@@ -74,9 +74,9 @@
 <tr><td><code><a name='1BAB'>1BAB</a></code></td><td class='c'> ◌᮫ </td><td colSpan='2'><span class='name'>Sundanese Sign Virama</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>forms conjuncts in older orthography</td></tr>
 <tr><td colspan='4'><h2>Consonant signs</h2></td></tr>
-<tr><td><code><a name='1BAC'>1BAC</a></code></td><td class='c'> ᮬ </td><td colSpan='2'><span class='name'>Sundanese Consonant Sign Pasangan Ma</span></td></tr>
+<tr><td><code><a name='1BAC'>1BAC</a></code></td><td class='c'> ◌ᮬ </td><td colSpan='2'><span class='name'>Sundanese Consonant Sign Pasangan Ma</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>=</td><td>subjoined ma</td></tr>
-<tr><td><code><a name='1BAD'>1BAD</a></code></td><td class='c'> ᮭ </td><td colSpan='2'><span class='name'>Sundanese Consonant Sign Pasangan Wa</span></td></tr>
+<tr><td><code><a name='1BAD'>1BAD</a></code></td><td class='c'> ◌ᮭ </td><td colSpan='2'><span class='name'>Sundanese Consonant Sign Pasangan Wa</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>=</td><td>subjoined wa</td></tr>
 <tr><td colspan='4'><h2>Additional consonants</h2></td></tr>
 <tr><td><code><a name='1BAE'>1BAE</a></code></td><td class='c'> ᮮ </td><td colSpan='2'><span class='name'>Sundanese Letter Kha</span></td></tr>
