--- a/unicodetools/data/charts/nameslist/n_20A0.html
+++ b/unicodetools/data/charts/nameslist/n_20A0.html
@@ -111,6 +111,8 @@
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>2133</code> ℳ script capital m</td></tr>
 <tr><td class='new'><code><a name='20BC'>20BC</a></code></td><td class='c'> ₼ </td><td colSpan='2' class='new'><span class='name'>Manat Sign</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Azerbaijan</td></tr>
+<tr><td class='new'><code><a name='20BD'>20BD</a></code></td><td class='c'> ₽ </td><td colSpan='2' class='new'><span class='name'>Ruble Sign</span></td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Russia</td></tr>
 </table>
 <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
 </body>
