--- a/unicodetools/data/charts/nameslist/n_A8E0.html
+++ b/unicodetools/data/charts/nameslist/n_A8E0.html
@@ -8,7 +8,8 @@
 <body>
 <h1>Devanagari Extended</h1>
 <p><table>
-<tr><td colspan='4'><h2>Cantillation marks for the Samaveda</h2></td></tr>
+<tr><td colspan='4'><h2>Cantillation marks (svara) for the Samaveda</h2></td></tr>
+<tr><td class='comment' colspan='4'>See the similar set of Grantha svara markers for the Samaveda, encoded in the range 11366-11374.</td></tr>
 <tr><td width='1pt'><code><a name='A8E0'>A8E0</a></code></td><td class='c'> ◌꣠ </td><td colSpan='2'><span class='name'>Combining Devanagari Digit Zero</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>=</td><td>vaidika saamasvara anka shuunya</td></tr>
 <tr><td><code><a name='A8E1'>A8E1</a></code></td><td class='c'> ◌꣡ </td><td colSpan='2'><span class='name'>Combining Devanagari Digit One</span></td></tr>
