--- a/unicodetools/data/charts/script/chart_Punctuation-Close.html
+++ b/unicodetools/data/charts/script/chart_Punctuation-Close.html
@@ -56,5 +56,5 @@
 <td  title='BOTTOM RIGHT HALF BRACKET'>&#x2E25;<br><tt>2E25</tt></td>
 <td  title='RIGHT SIDEWAYS U BRACKET'>&#x2E27;<br><tt>2E27</tt></td>
 <td  title='RIGHT DOUBLE PARENTHESIS'>&#x2E29;<br><tt>2E29</tt></td>
-<td  title='ORNATE RIGHT PARENTHESIS'>&#xFD3F;<br><tt>FD3F</tt></td>
+<td  title='ORNATE LEFT PARENTHESIS'>&#xFD3E;<br><tt>FD3E</tt></td>
 </table></body></html>
