--- a/unicodetools/data/charts/script/chart_Symbol-Modifier.html
+++ b/unicodetools/data/charts/script/chart_Symbol-Modifier.html
@@ -89,4 +89,5 @@
 <td  title='MODIFIER LETTER COLON'>&#xA789;<br><tt>A789</tt></td>
 </tr><tr>
 <td  title='MODIFIER LETTER SHORT EQUALS SIGN'>&#xA78A;<br><tt>A78A</tt></td>
+<td class='new' title='MODIFIER BREVE WITH INVERTED BREVE'>&#xAB5B;<br><tt>AB5B</tt></td>
 </table></body></html>
