--- a/unicodetools/data/charts/script/index_list.html
+++ b/unicodetools/data/charts/script/index_list.html
@@ -173,6 +173,8 @@ a.new {
 
 <a href = 'chart_Nko.html' title='Nkoo'>Nko</a><br>
 
+<a href = 'chart_Unknown.html' title='Zzzz' class='new'>Unknown</a><br>
+
 <a href = 'chart_Sundanese.html' title='Sund'>Sundanese</a><br>
 
 <a href = 'chart_Lepcha.html' title='Lepc'>Lepcha</a><br>
@@ -291,7 +293,7 @@ a.new {
 
 <a href = 'chart_Warang_Citi.html' title='Wara' class='new'>Warang_Citi</a><br>
 
-<a href = 'chart_Letter-Modifier.html' title='Lm' class='new'>Letter-Modifier</a><br>
+<a href = 'chart_Letter-Modifier.html' title='Lm'>Letter-Modifier</a><br>
 
 <a href = 'chart_Letter-Other.html' title='Lo'>Letter-Other</a><br>
 
@@ -329,7 +331,7 @@ a.new {
 
 <a href = 'chart_Symbol-Currency.html' title='Sc' class='new'>Symbol-Currency</a><br>
 
-<a href = 'chart_Symbol-Modifier.html' title='Sk'>Symbol-Modifier</a><br>
+<a href = 'chart_Symbol-Modifier.html' title='Sk' class='new'>Symbol-Modifier</a><br>
 
 <a href = 'chart_Symbol-Other.html' title='So' class='new'>Symbol-Other</a><br>
 
@@ -346,5 +348,5 @@ Script&nbsp;Charts<br>
 <a href='../nameslist/index.html' target='_top'>Names&nbsp;List&nbsp;Charts</a><br>
 </p><hr width='50%'><p style='font-size: 70%; text-align: center;'>
 UCD: 7.0.0
-<br>2014-01-21 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
+<br>2014-02-09 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
 </p></div></body></html>
