--- a/unicodetools/data/charts/nameslist/c_20A0.html
+++ b/unicodetools/data/charts/nameslist/c_20A0.html
@@ -44,7 +44,7 @@
 <td class='cell' title='turkish lira sign'> ₺ <br><tt><a href='n_20A0.html#20BA'>20BA</a></tt></td>
 <td class='cellnew' title='nordic mark sign'> ₻ <br><tt><a href='n_20A0.html#20BB'>20BB</a></tt></td>
 <td class='cellnew' title='manat sign'> ₼ <br><tt><a href='n_20A0.html#20BC'>20BC</a></tt></td>
-<td class='cell'> </td>
+<td class='cellnew' title='ruble sign'> ₽ <br><tt><a href='n_20A0.html#20BD'>20BD</a></tt></td>
 <td class='cell'> </td>
 <td class='cell'> </td>
 </tr></table></div>
