--- a/unicodetools/data/charts/nameslist/n_0530.html
+++ b/unicodetools/data/charts/nameslist/n_0530.html
@@ -100,11 +100,13 @@
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>02CA</code> ˊ modifier letter acute accent</td></tr>
 <tr><td><code><a name='055C'>055C</a></code></td><td class='c'> ՜ </td><td colSpan='2'><span class='name'>Armenian Exclamation Mark</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>=</td><td>batsaganchakan nshan</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>marks intonation on word, rather than occurring finally</td></tr>
 <tr><td><code><a name='055D'>055D</a></code></td><td class='c'> ՝ </td><td colSpan='2'><span class='name'>Armenian Comma</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>=</td><td>bowt</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>02CB</code> ˋ modifier letter grave accent</td></tr>
 <tr><td><code><a name='055E'>055E</a></code></td><td class='c'> ՞ </td><td colSpan='2'><span class='name'>Armenian Question Mark</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>=</td><td>hartsakan nshan</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>marks intonation on word, rather than occurring finally</td></tr>
 <tr><td><code><a name='055F'>055F</a></code></td><td class='c'> ՟ </td><td colSpan='2'><span class='name'>Armenian Abbreviation Mark</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>=</td><td>patiw</td></tr>
 <tr><td colspan='4'><h2>Lowercase letters</h2></td></tr>
