added script for ruble
git-svn-id: https://unicode.org/repos/unicodetools/trunk@603 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/data/charts/script/chart_Symbol-Currency.html
+++ b/unicodetools/data/charts/script/chart_Symbol-Currency.html
@@ -47,4 +47,5 @@
 <td  title='TURKISH LIRA SIGN'>&#x20BA;<br><tt>20BA</tt></td>
 <td class='new' title='NORDIC MARK SIGN'>&#x20BB;<br><tt>20BB</tt></td>
 <td class='new' title='MANAT SIGN'>&#x20BC;<br><tt>20BC</tt></td>
+<td class='new' title='RUBLE SIGN'>&#x20BD;<br><tt>20BD</tt></td>
 </table></body></html>
